# src/modules/stable/entities/barn.entity.ts
@@ -1,6 +1,7 @@
 import { Column, Entity, Index, JoinColumn, ManyToOne } from 'typeorm';
 import { SoftDeletableRecordEntity } from '../../../common/database/base-record.entity';
 import { UserEntity } from '../../users/entities/user.entity';
+import { BarnStatus } from '../constants/barn-status.enum';
 
 /**
  * BarnEntity: một khu chuồng trong club, gom nhiều stall.
@@ -15,6 +16,20 @@ import { UserEntity } from '../../users/entities/user.entity';
 export class BarnEntity extends SoftDeletableRecordEntity {
   @Column({ type: 'varchar', length: 80 })
   name!: string;
+
+  @Column({ type: 'text', nullable: true })
+  description!: string | null;
+
+  @Column({ type: 'int', nullable: true })
+  capacity!: number | null;
+
+  @Column({
+    type: 'varchar',
+    length: 32,
+    default: BarnStatus.ACTIVE,
+    enum: BarnStatus,
+  })
+  status!: BarnStatus;
 
   @Column({ name: 'head_trainer_id', type: 'uuid', nullable: true })
   headTrainerId!: string | null;
